@@ -1,0 +1,24 @@
+#include "backgroundHits.h"
+
+
+// initialize from string
+BackgroundHit::BackgroundHit(string init)
+{
+	
+}
+
+
+
+
+
+// initialize map from filename
+GBackgroundHits::GBackgroundHits(string filename)
+{
+	
+}
+
+
+
+
+
+
