@@ -63,6 +63,7 @@ private:
 	double RECORD_PASSBY;    ///< If set to one, records particles even if they do not leave any energy
 	double RECORD_MIRROR;    ///< If set to one, records particles in the mirror detectors
 	string ELECTRONICNOISE;  ///< List of detectors for which electronic noise routines will be called
+	string BGFILE;           ///< filename containing background hits
 	int fastMCMode;          ///< In fast MC mode, the particle smeared/unsmeared momenta are saved
 
 public:
